Fix bottom margin on Firefox

--- a/va-virkailija/web/va/style/admin.less
+++ b/va-virkailija/web/va/style/admin.less
@@ -417,7 +417,7 @@ table.translation, #haku-roles table {
 .selvitys-email-message {
   width: ~"calc(100% - 20px)";
   padding: 10px;
-  margin-top: 10px;
+  margin: 10px 0;
 
   &--sent {
     white-space: pre-wrap;
